deployment/master-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: master
  name: master
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: master
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: master
    spec:
      containers:
      - name: master
        image: julesyoungberg/distributed-evolution-master
        imagePullPolicy: ""
        ports:
        - containerPort: 9000
        - containerPort: 8080
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
