deployment/sentinel-replica-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sentinel-replica
  labels:
    app: sentinel-replica
spec:
  selector:
    matchLabels:
      app: sentinel-replica
  replicas: 2
  template:
    metadata:
      labels:
        app: sentinel-replica
    spec:
      containers:
      - name: replica
        image: julesyoungberg/distributed-evolution-sentinel-replica
        ports:
          - name: redis-sentinel
            containerPort: 26379
        resources:
          requests:
            cpu: 500m
            memory: 300Mi
          limits:
            cpu: 1000m
            memory: 600Mi
