deployment/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: ui
  name: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ui
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: ui
    spec:
      containers:
      - name: ui
        image: julesyoungberg/distributed-evolution-ui
        imagePullPolicy: ""
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 50m
            memory: 50Mi
          limits:
            cpu: 100m
            memory: 100Mi
      restartPolicy: Always
      serviceAccountName: ""
status: {}
