deployment/master-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-kompose.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: master
  name: master
spec:
  ports:
  - name: "9000"
    port: 9000
    targetPort: 9000
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    io.kompose.service: master
status:
  loadBalancer: {}
