deployment/redis-master-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: redis-master
  name: redis-master
spec:
  selector:
    io.kompose.service: redis-master
  ports:
  - port: 6379
    targetPort: 6379
status:
  loadBalancer: {}
