deployment/redis-slave-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: redis-slave
  name: redis-slave
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    io.kompose.service: redis-slave
status:
  loadBalancer: {}
