deployment/sentinel-master-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sentinel-master
spec:
  ports:
  - name: redis-master
    port: 6379
    targetPort: 6379
  - name: redis-sentinel
    port: 26379
    targetPort: 26379
  selector:
    app: sentinel-master
