deployment/sentinel-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: sentinel
  name: sentinel
spec:
  ports:
  - port: 26379
    targetPort: 26379
  selector:
    io.kompose.service: sentinel
status:
  loadBalancer: {}
