deployment/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.service.type: LoadBalancer
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: ui
  name: ui
spec:
  type: LoadBalancer
  selector:
    io.kompose.service: ui
  ports:
  - port: 80
    targetPort: 3000
status:
  loadBalancer: {}
